Uređeni komentari, dodan redis.conf fajl

--- a/Backend/redis.conf
+++ b/Backend/redis.conf
@@ -1,7 +1,7 @@
 # redis.conf
 
 # Postavljanje lozinke za Redis
-requirepass StrongRedisPassword123
+requirepass StrongRedisPassword123 # Promjeniti na VPS-u
 
 # Memorijska shema
 maxmemory 256mb
