--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -57,8 +57,8 @@ services:
     volumes:
       - mongo_data:/data/db
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=example
+      - MONGO_INITDB_ROOT_USERNAME=adminUser123 # Promjeniti korisnika na VPS-u
+      - MONGO_INITDB_ROOT_PASSWORD=jakaSifra123 # Promjeniti sifru na VPS-u
     labels:
       - "traefik.enable=false"
     networks:
