--- a/Backend/engine/redis.conf
+++ b/Backend/engine/redis.conf
@@ -1,7 +1,7 @@
 # redis.conf
 
 # Postavljanje lozinke za Redis
-requirepass StrongRedisPassword123 # Promjeniti na VPS-u
+requirepass StrongRedisPassword123
 
 # Memorijska shema
 maxmemory 256mb
