--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "framer-motion": "^11.15.0",
     "fuse.js": "^7.0.0",
     "lodash.debounce": "^4.0.8",
