--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "fuse.js": "^7.0.0",
     "lodash.debounce": "^4.0.8",
@@ -23,6 +24,7 @@
     "react-router-dom": "^7.1.1",
     "react-simple-typewriter": "^5.0.1",
     "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.6.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
