--- a/Backend/engine/docker-compose.yml
+++ b/Backend/engine/docker-compose.yml
@@ -1,5 +1,3 @@
-# docker-compose.yml
-
 services:
   traefik:
     image: traefik:v2.10
@@ -27,6 +25,9 @@ services:
       - traefik-certificates:/letsencrypt
     labels:
       - "traefik.enable=true"
+      - "traefik.http.middlewares.blockip.headers.customresponseheaders.X-Frame-Options=SAMEORIGIN"
+      - "traefik.http.middlewares.blockip.headers.customresponseheaders.X-Content-Type-Options=nosniff"
+      - "traefik.http.middlewares.blockip.headers.customresponseheaders.X-XSS-Protection=1; mode=block"
       - "traefik.http.routers.dashboard.rule=Host(`dashboard.eduformacije.com`)"
       - "traefik.http.routers.dashboard.entrypoints=websecure"
       - "traefik.http.routers.dashboard.tls.certresolver=myresolver"
@@ -43,6 +44,7 @@ services:
       - "traefik.http.routers.engine.entrypoints=websecure"
       - "traefik.http.routers.engine.tls.certresolver=myresolver"
       - "traefik.http.services.engine.loadbalancer.server.port=80"
+      - "traefik.http.routers.engine.middlewares=blockip"
     networks:
       - default
     env_file:
@@ -93,7 +95,6 @@ volumes:
   mongo_data:
   redis_data:
   traefik-certificates:
-
 
 networks:
   default:
