--- a/Backend/engine/Caddyfile
+++ b/Backend/engine/Caddyfile
@@ -5,4 +5,6 @@ engine.eduformacije.com {
 cdn.eduformacije.com {
     root * /srv
     file_server
+    try_files {path} /srednje-programi.json
 }
+
