--- a/Backend/engine/docker-compose.yml
+++ b/Backend/engine/docker-compose.yml
@@ -9,20 +9,14 @@ services:
       - "443:443"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./srednje-programi.json:/srv/srednje-programi.json:ro
       - caddy_data:/data
       - caddy_config:/config
     networks:
       - default
     depends_on:
-      - cdn
       - engine
-  cdn:
-    image: caddy:latest
-    restart: unless-stopped
-    volumes:
-      - ./srednje-programi.json:/srv/srednje-programi.json:ro # Mapira samo jedan fajl
-    networks:
-      - default
+      # Više nema cdn-a
 
   engine:
     build: .
@@ -34,7 +28,7 @@ services:
     depends_on:
       - mongo
       - redis
-      - cdn # Engine se pokreće tek nakon CDNa
+      # maknuli smo cdn
 
   mongo:
     image: mongo
@@ -42,8 +36,8 @@ services:
     volumes:
       - mongo_data:/data/db
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=adminUser123 # Promjeni korisnika na VPS-u
-      - MONGO_INITDB_ROOT_PASSWORD=jakaSifra123 # Promjeni šifru na VPS-u
+      - MONGO_INITDB_ROOT_USERNAME=adminUser123
+      - MONGO_INITDB_ROOT_PASSWORD=jakaSifra123
     networks:
       - default
 
@@ -75,7 +69,6 @@ volumes:
   redis_data:
   caddy_data:
   caddy_config:
-
 
 networks:
   default:
