--- a/Backend/engine/redis.conf
+++ b/Backend/engine/redis.conf
@@ -3,10 +3,10 @@
 # Postavljanje lozinke za Redis
 requirepass StrongRedisPassword123
 
-# Memorijska shema
-maxmemory 256mb
+# Povećaj maksimalnu memoriju
+maxmemory 512mb
 maxmemory-policy allkeys-lru
 
-# Slušanje na svim interfejsima unutar Docker mreže
+# Dozvoli pristup iz Docker mreže
 bind 0.0.0.0
-protected-mode yes
+protected-mode no
