--- a/Backend/engine/docker-compose.yml
+++ b/Backend/engine/docker-compose.yml
@@ -30,6 +30,11 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "https://engine.eduformacije.com/api/v1/status" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   mongo:
     image: mongo
