Uredjen redis conf

--- a/Backend/engine/redis.conf
+++ b/Backend/engine/redis.conf
@@ -5,7 +5,7 @@ requirepass StrongRedisPassword123
 
 # Povećaj maksimalnu memoriju
 maxmemory 512mb
-maxmemory-policy allkeys-lru
+maxmemory-policy noeviction  # Sprečava automatsko brisanje podataka
 
 # Dozvoli pristup iz Docker mreže
 bind 0.0.0.0
