--- a/Backend/engine/redis.conf
+++ b/Backend/engine/redis.conf
@@ -1,12 +1,39 @@
 # redis.conf
 
-# Postavljanje lozinke za Redis
+# Autentifikacija
 requirepass StrongRedisPassword123
 
-# Povećaj maksimalnu memoriju
-maxmemory 512mb
-maxmemory-policy noeviction  # Sprečava automatsko brisanje podataka
+# Memorijska konfiguracija
+maxmemory 1gb
+maxmemory-policy noeviction
 
-# Dozvoli pristup iz Docker mreže
+# Mrežna konfiguracija
 bind 0.0.0.0
 protected-mode no
+
+# Perzistencija
+appendonly yes
+appendfsync everysec
+auto-aof-rewrite-percentage 100
+auto-aof-rewrite-min-size 64mb
+
+# Performance tuning
+tcp-keepalive 300
+timeout 0
+tcp-backlog 511
+
+# Snapshotting (kao backup uz AOF)
+save 900 1
+save 300 10
+save 60 10000
+
+# Optimizacije za pisanje
+no-appendfsync-on-rewrite yes
+aof-load-truncated yes
+aof-rewrite-incremental-fsync yes
+
+# Memorijske optimizacije
+activedefrag yes
+active-defrag-ignore-bytes 100mb
+active-defrag-threshold-lower 10
+active-defrag-threshold-upper 100
