--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -14,6 +14,6 @@ MONGO_URI=mongodb://adminUser123:jakaSifra123@mongo:27017/eduformacije?authSourc
 SREDNJE_SKOLE_URL=https://data.gov.hr/ckan/dataset/05eeb14f-5a94-4f63-b518-29a00a2b850d/resource/srednje-skole/download/data.json
 OSNOVNE_SKOLE_URL=https://data.gov.hr/ckan/dataset/2841fb78-c828-4ab2-8cdc-f22abeed3a8c/resource/osnovne-skole/download/data.json
 
-SREDNJE_SKOLE_INFO_URL=https://cdn.eduformacije.com/srednje-programi.json 
+SREDNJE_SKOLE_INFO_URL=http://caddy:80/srednje-programi.json
 
 API_SECRET="eduformacije2024"
